added input fields

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
 </head>
 <body>
     <header>Salary Calculator</header>
+    <h3>Add employee</h3>
+    <section id="inputFields">
+        <input type="text" placeholder="First Name" id="firstNameIn">
+        <input type="text" placeholder="Last Name" id="lastNameIn">
+        <input type="text" placeholder="ID Number" id="idNumberIn">
+        <input type="text" placeholder="Job Title" id="jobTitleIn">
+        <input type="text" placeholder="Salary" id="salaryIn">
+    </section>
+    <section>
+        <button id="submitButton">Submit</button>
+    </section>
 </body>
 </html>
