--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <input type="text" placeholder="Job Title" id="jobTitleIn">
         <input type="text" placeholder="Salary" id="salaryIn">
     </section>
-    <section>
         <button id="submitButton">Submit</button>
-    </section>
+    <h3>Employees</h3>
+    <ul id ="employeesOut"></ul>
 </body>
 </html>
