Total Monthly Salary

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </section>
         <button id="submitButton">Submit</button>
     <h3>Employees</h3>
-    <ul id ="employeesOut"></ul>
+    <ul id="employeesOut"></ul>
+    <h3 id="totalSalaryOut">Total Monthly : </h3>
 </body>
 </html>
