added striping to table class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="submitButton">Submit</button>
     </section>
     <h3>Employees</h3>
-    <table class="table">
+    <table class="table table-striped">
       <thead>
         <tr>
           <th scope="col">First</th>
