added button classes for submit and delete buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="text" placeholder="ID Number" id="idNumberIn">
         <input type="text" placeholder="Job Title" id="jobTitleIn">
         <input type="text" placeholder="Salary" id="salaryIn">
-        <button id="submitButton">Submit</button>
+        <button id="submitButton" class="btn-primary">Submit</button>
     </section>
     <h3>Employees</h3>
     <table class="table table-striped">
